fix: news code samples not wrapping
fixes #299

--- a/src/components/Toolbar/components/NewsFeed/style.module.scss
+++ b/src/components/Toolbar/components/NewsFeed/style.module.scss
@@ -17,6 +17,19 @@
 	background-image: linear-gradient(to bottom, transparent, var(--mantine-color-body)), var(--image-url);
 }
 
+.reading-content {
+	pre {
+		white-space: pre-wrap;
+		background-color: var(--mantine-color-slate-9);
+	}
+
+	code {
+		background-color: unset !important;
+		color: var(--mantine-color-bright) !important;
+		padding: 0;
+	}
+}
+
 .back-button {
 	-webkit-backdrop-filter: blur(4px);
 	backdrop-filter: blur(4px);
